# reflective-deep-agent

./: .gitignore  AGENTS.md  README.md  WALKTHROUGH.md  log_report.md  pyproject.toml  reflections.yaml
examples/: run_deep.py
examples/sample_logs/: app.txt
plan_once/: __init__.py  deep_features.py  graph.py  reflector.py  state.py  token_tracker.py  workers.py
skills/log-analysis/: SKILL.md
tests/: chat_model.py  test_graph.py  test_token_tracker.py  test_workers.py
