[project]
name = "plan-once-langgraph"
version = "0.1.0"
description = "Plan Once, Execute Once — a pure LangGraph DAG log-analysis agent powered by Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.7,<2.0.0",
    "langchain>=1.2.7,<2.0.0",
    "langchain-ollama>=1.0.0,<2.0.0",
    "langgraph>=0.4.0",
]

[project.optional-dependencies]
deep = [
    "deepagents>=0.4.7,<1.0.0",
]

[dependency-groups]
test = [
    "pytest",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plan_once*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
